Inconsistent Boolean Behavior (2.93 regression?) #86805

Closed
opened 2021-03-22 00:04:52 +01:00 by Alaska · 12 comments
Member

System Information:
Operating system: Linux-5.10.0-4-amd64-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.56

Blender Version:
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-21 00:24, hash: b4e96550ce
Worked: 2.92 release from preliminary testing

Short description of error:
In my scene I have an object that makes use of various Boolean modifiers. Roughly 50% of the time the Boolean modifiers are re-calculated (by re-opening the file or changing the boolean modifier visibility), the modifiers will produce the wrong result. Here's images showing the issue:

Boolean correct.png Boolean Incorrect.png
Correct Incorrect

Exact steps for others to reproduce the error:
I'm not exactly sure how to reproduce it, so I've included a .blend file that has an issue.
To reproduce the issue with the .blend file, either:

  1. Reload the file over and over again and observe the different results.
  2. Toggle the visibility of one of the boolean modifiers in the .blend file on and off over and over and observe the different results.

If you would like to investigate the objects used for the boolean modifiers, then exit local mode by pressing / on the keyboard.

#86805 - Boolean Inconsistency.blend

Here's a video demonstrating the issue:
2021-03-22 12-01-06.mp4

**System Information:** Operating system: Linux-5.10.0-4-amd64-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.56 **Blender Version:** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-21 00:24, hash: `b4e96550ce` Worked: 2.92 release from preliminary testing **Short description of error:** In my scene I have an object that makes use of various Boolean modifiers. Roughly 50% of the time the Boolean modifiers are re-calculated (by re-opening the file or changing the boolean modifier visibility), the modifiers will produce the wrong result. Here's images showing the issue: |![Boolean correct.png](https://archive.blender.org/developer/F9903005/Boolean_correct.png)|![Boolean Incorrect.png](https://archive.blender.org/developer/F9903007/Boolean_Incorrect.png)| | -- | -- | | Correct| Incorrect| **Exact steps for others to reproduce the error:** I'm not exactly sure how to reproduce it, so I've included a .blend file that has an issue. To reproduce the issue with the .blend file, either: 1. Reload the file over and over again and observe the different results. 2. Toggle the visibility of one of the boolean modifiers in the .blend file on and off over and over and observe the different results. If you would like to investigate the objects used for the boolean modifiers, then exit local mode by pressing `/` on the keyboard. [#86805 - Boolean Inconsistency.blend](https://archive.blender.org/developer/F9903015/T86805_-_Boolean_Inconsistency.blend) Here's a video demonstrating the issue: [2021-03-22 12-01-06.mp4](https://archive.blender.org/developer/F9903013/2021-03-22_12-01-06.mp4)
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Alaska changed title from Inconsistent Boolean Behavior to Inconsistent Boolean Behavior (2.93 regression?) 2021-03-22 00:14:09 +01:00
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this issue on the latest 2.93.0 Alpha, branch: master, commit date: 2021-03-22 11:23, hash: c4c195672d. The evaluated mesh seems to be randomly switching between the two results.

I can confirm this issue on the latest 2.93.0 Alpha, branch: master, commit date: 2021-03-22 11:23, hash: `c4c195672d`. The evaluated mesh seems to be randomly switching between the two results.

Added subscriber: @Wovchick

Added subscriber: @Wovchick
Member

Added subscribers: @howardt, @HDMaster84

Added subscribers: @howardt, @HDMaster84
Member

I have done some ablation tests and reduced the file down to two booleans. You can see the result switch not only when reevaluating the modifier, but also when moving some of the vertices of the tube in that file.
#86805 - Boolean Inconsistency.blend
@howardt Any idea what could cause this?

I have done some ablation tests and reduced the file down to two booleans. You can see the result switch not only when reevaluating the modifier, but also when moving some of the vertices of the tube in that file. [#86805 - Boolean Inconsistency.blend](https://archive.blender.org/developer/F9936570/T86805_-_Boolean_Inconsistency.blend) @howardt Any idea what could cause this?
Member

Hmm, I tried this with the latest build and could not get it to do this. I did this on my Mac. What platform are you using (I'm hoping this isn't platform specific, but grasping at straws here).

Hmm, I tried this with the latest build and could not get it to do this. I did this on my Mac. What platform are you using (I'm hoping this isn't platform specific, but grasping at straws here).
Member

Tested and confirmed with

System Information
Operating system: Linux-5.8.0-2-amd64-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-04-16 17:44, hash: e524a6ecf7

Can not reproduce with:

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 780/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-04-16 17:44, hash: e524a6ecf7

So this one seems to be Linux specific.

Tested and confirmed with **System Information** Operating system: Linux-5.8.0-2-amd64-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-04-16 17:44, hash: `e524a6ecf7` Can not reproduce with: **System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 780/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-04-16 17:44, hash: `e524a6ecf7` So this one seems to be Linux specific.
Member

OK, I can get it to happen on Linux, about once out of every 4 times.

OK, I can get it to happen on Linux, about once out of every 4 times.

This issue was referenced by 2d5a715f44

This issue was referenced by 2d5a715f440a22eeeffdc7bbb358dd3975c774bc
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Howard Trickey self-assigned this 2021-04-17 20:22:30 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86805
No description provided.